--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.1.0",
+    "prisma": "^5.7.0",
     "ts-jest": "^29.1.1",
     "typescript": "*"
   },
