--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,6 @@ services:
   postgres:
     image: postgres
     environment:
-      POSTGRES_PASSWORD: "POSTGRES_PASSWORD"
+      POSTGRES_PASSWORD: "12345"
     ports:
       - "5432:5432"
