--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "ludum",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand --coverage false",
-    "dev": "ts-node-dev --respawn --transpileOnly --ignore-watch node_modules src/server.ts"
+    "dev": "tsx watch src/server.ts"
   },
   "keywords": [],
   "author": "Murilo Avila",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "babel-eslint": "^10.1.0",
@@ -25,10 +25,15 @@
     "prettier": "^3.1.0",
     "prisma": "^5.7.0",
     "ts-jest": "^29.1.1",
+    "tsx": "^4.6.2",
     "typescript": "*"
   },
   "dependencies": {
+    "@prisma/client": "5.7.0",
     "crypto": "^1.0.1",
-    "ts-node-dev": "^2.0.0"
+    "express": "^4.18.2",
+    "reflect-metadata": "^0.1.14",
+    "ts-node-dev": "^2.0.0",
+    "typedi": "^0.10.0"
   }
 }
