--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "esModuleInterop": true,
     "allowJs": true,
     "strictNullChecks": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "paths": {
       "@/*": [
         "./src/*"
