feat: change to sqlite

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
+version: '3'
+
 services:
-  postgres:
-    image: postgres
-    environment:
-      POSTGRES_PASSWORD: "12345"
-    ports:
-      - "5432:5432"
+  sqlite3:
+    image: nouchka/sqlite3:latest
+    stdin_open: true
+    tty: true
+    volumes:
+      - ./db/:/root/db/
