--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
         "@typescript-eslint/strict-boolean-expressions": "off",
         "@typescript-eslint/consistent-type-imports": "off",
         "@typescript-eslint/indent": "off",
-        "@typescript-eslint/space-before-function-paren": "off"
+        "@typescript-eslint/space-before-function-paren": "off",
+        "@typescript-eslint/no-unsafe-argument": "off"
     }
 }
