--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.11",
+    "@types/mongodb": "^4.0.7",
     "@typescript-eslint/eslint-plugin": "^6.4.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.0.1",
@@ -32,6 +33,7 @@
     "@prisma/client": "5.7.0",
     "crypto": "^1.0.1",
     "express": "^4.18.2",
+    "mongodb": "^6.3.0",
     "reflect-metadata": "^0.1.14",
     "ts-node-dev": "^2.0.0",
     "typedi": "^0.10.0"
